@@ -12,13 +12,9 @@ import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 
-import ro.zizicu.mservice.order.entities.Customer;
-import ro.zizicu.mservice.order.entities.Employee;
-import ro.zizicu.mservice.order.entities.Order;
+import ro.zizicu.mservice.order.entities.*;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.*;
 
 @SpringBootTest
 @Slf4j
@@ -34,12 +30,13 @@ public class OrderRepositoryTest {
 	private CustomerFinderRepository customerFinderRepository; 	
 
 	@Test
-	public void testOrderSave() {
+	public void testOrderSaveNoDetails() {
 		Order order = createOrder();
 		Employee e = employeeRepository.findAll().iterator().next();
 		order.setEmployee(e);
 		Customer c = createCustomer("Test2");
 		order.setCustomer(c);
+		order.setShipperId(1);
 		order = orderRepository.save(order);
 		c = order.getCustomer();
 		assertNotNull(order.getId());
@@ -48,11 +45,38 @@ public class OrderRepositoryTest {
 	}
 
 	@Test
+	public void testOrderSave() {
+		Order order = createOrder();
+		Employee e = employeeRepository.findAll().iterator().next();
+		order.setEmployee(e);
+		Customer c = createCustomer("Test2");
+		order.setCustomer(c);
+		order.setShipperId(1);
+
+		OrderDetail od = new OrderDetail();
+		od.setOrder(order);
+		od.setUnitPrice(1.1);
+		od.setQuantity(1);
+		od.setDiscount(0.0);
+		OrderDetailId orderDetailId = new OrderDetailId();
+		orderDetailId.setProductId(1);
+		od.setId(orderDetailId);
+		order.getOrderDetails().add(od);
+
+		Order savedOrder = orderRepository.save(order);
+		c = order.getCustomer();
+		assertNotNull(order.getId());
+		orderRepository.delete(savedOrder);
+		customerRepository.delete(c);
+	}
+
+
+	@Test
 	public void testFindByCustomer() {
 		log.info("Test find orders");
 		List<Customer> customers = customerFinderRepository.find("ALFKI", null, null, null);
 		assertEquals(1, customers.size());
-		List<Order> orders = orderRepository.findOrders(customers.get(0), null, null, null);
+		List<Order> orders = orderRepository.findOrders(customers.getFirst(), null, null, null);
 		assertEquals(6, orders.size());
 		Calendar cal = Calendar.getInstance();
 		cal.set(1997, Calendar.JANUARY, 1);
@@ -61,13 +85,13 @@ public class OrderRepositoryTest {
 		Date endDate = cal.getTime();
 		log.info("Test find order with start date");
 		orders = orderRepository.findOrders(null, startDate, null, null);
-		assertTrue(orders.size() > 0);
+        assertFalse(orders.isEmpty());
 		log.info("Test find order with end date");
 		orders = orderRepository.findOrders(null, null, endDate, null);
-		assertTrue(orders.size() > 0);
+        assertFalse(orders.isEmpty());
 		log.info("Test find order dates between");
 		orders = orderRepository.findOrders(null, startDate, endDate, null);
-		assertTrue(orders.size() > 0);
+        assertFalse(orders.isEmpty());
 	}
 	
 	@Test
